# custom-authentication-backend-django

./: README.md  db.sqlite3  pyproject.toml
in_memory_authentication/: apps.py
in_memory_authentication/backends/: __init__.py  in_memory_authentication_backend.py
mysite/: settings.py  urls.py
