[tool.poetry]
name = "custom-authentication-backend-django"
version = "0.1.0"
description = ""
authors = ["Bradley Marques <bradleyrcmarques@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
